correct spacing on contact phone

--- a/src/components/Contactitem.css
+++ b/src/components/Contactitem.css
@@ -19,7 +19,7 @@
 }
 
 .margin-phone {
-  margin-left: 87px;
+  margin-left: 82px;
 }
 
 .margin-social {
